--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         
         <div class="white-box">
         <div class="container">
+            <div class="products">
             <div class="box">
                 <div class="pen">
                 </div>
@@ -64,6 +65,7 @@
                 </div>
             </div>
         </div>
+            </div>
                 
              <!--
                 <div class="box">
