The glasses are outside of the .box

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
                 <div class="box">
                   <div class="glasses">
+                      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png">
                     </div>
                     <h6>Thermal Glasses</h6>
                 </div>
