--- a/index.html
+++ b/index.html
@@ -65,10 +65,8 @@
                     <h6>Thermal Glasses</h6>
                 </div>
             </div>
-        </div>
-            </div>
-                
-             <!--
+            
+            <div class="combined">
                 <div class="box">
                     <h6>Location</h6>
                     <p>-47.346454, 8432356</p>
@@ -78,9 +76,10 @@
                     <h6>Hours</h6>
                     <p>0800 - 1800</p>
                 </div>
+            </div>
         </div>
-        </div>
-        -->
+            </div>
+
         <footer>
             <div class="container">
                 <p>Copyright Secret Agent Supply Inc.</p>
