--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             </div>
             
             <div class="combined">
-                <div class="box">
+                <div class="anBox">
                     <h6>Location</h6>
                     <p>-47.346454, 8432356</p>
                 </div>
                 
-                 <div class="box">
+                 <div class="anBox">
                     <h6>Hours</h6>
                     <p>0800 - 1800</p>
                 </div>
